@@ -36,7 +36,7 @@ OBJS = Lucide.obj luutils.obj clipbrd.obj pmsplitter.obj pmtoolbar.obj \
        linklab.obj wwbtn.obj intern.obj messages.obj indexWindow.obj \
        fontsInfoDlg.obj docInfoDlg.obj findDlg.obj progressDlg.obj \
        aboutDlg.obj settingsDlg.obj lusettings.obj printDlg.obj \
-       print.obj stbrowser.obj
+       print.obj stbrowser.obj pipemon.obj
 
 lucide.dll: $(OBJS) lucide.res
   copy &&|
@@ -68,6 +68,7 @@ file $(OBJDIR)\wwbtn.obj
 file $(OBJDIR)\intern.obj
 file $(OBJDIR)\messages.obj
 file $(OBJDIR)\stbrowser.obj
+file $(OBJDIR)\pipemon.obj
 name $(EXEDIR)\lucide
 lib ..\plugins\ludoc\ludoc
 lib somtk
@@ -122,6 +123,7 @@ docViewer.obj:      docViewer.cpp
 indexWindow.obj:    indexWindow.cpp
 intern.obj:         intern.cpp
 messages.obj:       messages.cpp
+pipemon.obj:        pipemon.cpp
 linklab.obj:        linklab.c
 wwbtn.obj:          wwbtn.c
 stbrowser.obj:      stbrowser.c
