@@ -1,4 +1,5 @@
 Beta-5:
+  - Pipe commands, see readme for details.
   - PDF plugin: freetype library updated to version 2.2.1.
   - Updated NLS-files: Spanish, German...
 
